Add AssetType Meta

--- a/AMS/Views/Shared/_Layout.cshtml
+++ b/AMS/Views/Shared/_Layout.cshtml
@@ -36,6 +36,7 @@
   <script src="~/vendors/fullcalendar-4.4.0/packages/interaction/main.min.js"></script>
   <script src="~/vendors/fullcalendar-4.4.0/packages/bootstrap/main.min.js"></script>
   <script src="~/vendors/fullcalendar-4.4.0/examples/js/theme-chooser.js"></script>
+  
 
   <link href="~/lib/leaflet/leaflet.css" rel="stylesheet" />
   <script src="~/lib/leaflet/leaflet.js"></script>
@@ -141,7 +142,8 @@
     <script src="~/vendors/bootstrap-table/dist/bootstrap-table.min.js"></script>
     <script src="~/vendors/bootstrap-table/dist/extensions/filter-control/bootstrap-table-filter-control.min.js"></script>
     <script src="~/vendors/bootstrap-table/dist/extensions/export/bootstrap-table-export.min.js"></script>
-
+    
+    <script src="~/lib/jquery.repeater/jquery.repeater.min.js"></script>
     <environment include="Development">
         <script src="~/js/site.js" asp-append-version="true"></script>
     </environment>
