--- a/AMS/Views/TicketTypes/Create.cshtml
+++ b/AMS/Views/TicketTypes/Create.cshtml
@@ -47,6 +47,39 @@
                             <span asp-validation-for="DefaultDuration" class="text-danger"></span>
                         </div>
                     </div>
+
+                    <div class="repeater">
+                        <!--
+                        The value given to the data-repeater-list attribute will be used as the
+                        base of rewritten name attributes.  In this example, the first
+                        data-repeater-item's name attribute would become group-a[0][text-input],
+                        and the second data-repeater-item would become group-a[1][text-input]
+                        -->
+                        <div data-repeater-list="Values">
+                            <div data-repeater-item class="form-group row">
+                                <div class="offset-3 col-md-9">
+                                    <div class="row">
+                                        <div class="col-md-10">
+                                            <select type="text" name="FieldId" asp-items="ViewBag.FieldId" class="form-control">
+                                                <option disabled value="">--- SELECT FIELD ---</option>
+                                            </select>
+                                        </div>
+                                        <div class="col-md-2">
+                                            <a data-repeater-delete href="#" class="btn btn-sm btn-danger">Remove</a>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="form-group row">
+                            <div class="col-md-3">
+                                <input data-repeater-create class="btn btn-sm btn-success" type="button" value="Add Field" />
+                            </div>
+
+                        </div>
+
+                    </div>
+
                 </div>
                 <div class="card-footer">
                     <button type="submit" class="btn btn-sm btn-primary">
@@ -64,4 +97,6 @@
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+
+    <script src="~/js/the-repeater.js"></script>
 }
