--- a/AMS/Views/AssetTypes/Edit.cshtml
+++ b/AMS/Views/AssetTypes/Edit.cshtml
@@ -43,6 +43,7 @@
                         </div>
                     </div>
 
+                    <!-- Meta Field Values -->
                     @for (int i = 0; i < Model.Values.Count; i++)
                     {
                         <div>
