Add Ticket Meta Values

--- a/AMS/Views/AssetTypes/Create.cshtml
+++ b/AMS/Views/AssetTypes/Create.cshtml
@@ -38,6 +38,7 @@
                         </div>
                     </div>
 
+                    <!-- Meta Fields -->
                     <div class="repeater">
                         <!--
                         The value given to the data-repeater-list attribute will be used as the
@@ -65,9 +66,9 @@
                             <div class="col-md-3">
                                 <input data-repeater-create class="btn btn-sm btn-success" type="button" value="Add Field" />
                             </div>
-                            
+
                         </div>
-                        
+
                     </div>
                 </div>
                 <div class="card-footer">
