--- a/AMS/Views/TicketTypes/Create.cshtml
+++ b/AMS/Views/TicketTypes/Create.cshtml
@@ -48,6 +48,7 @@
                         </div>
                     </div>
 
+                    <!-- Meta Fields -->
                     <div class="repeater">
                         <!--
                         The value given to the data-repeater-list attribute will be used as the
