--- a/AMS/Views/TicketTypes/Edit.cshtml
+++ b/AMS/Views/TicketTypes/Edit.cshtml
@@ -53,6 +53,7 @@
                         </div>
                     </div>
 
+                    <!-- Meta Field Values -->
                     @for (int i = 0; i < Model.Values.Count; i++)
                     {
                         <div>
