--- a/AMS/Views/Tickets/Index.cshtml
+++ b/AMS/Views/Tickets/Index.cshtml
@@ -30,104 +30,74 @@
                        class="table">
                     <thead>
                         <tr>
-                            <th data-field="summary" data-sortable="true" data-filter-control="input">
-                                @Html.DisplayNameFor(model => model.Summary)
-                            </th>
                             <th data-field="code" data-sortable="true" data-filter-control="input">
                                 @Html.DisplayNameFor(model => model.Code)
                             </th>
-                            <th data-field="description" data-filter-control="input">
-                                @Html.DisplayNameFor(model => model.Description)
+
+                            <th data-field="summary" data-sortable="true" data-filter-control="input">
+                                @Html.DisplayNameFor(model => model.Summary)
                             </th>
+
+                            <th data-field="status" data-sortable="true" data-filter-control="select">
+                                @Html.DisplayNameFor(model => model.Status)
+                            </th>
+
+                            <th data-field="dueDate" data-sortable="true" data-filter-control="input">
+                                @Html.DisplayNameFor(model => model.DueDate)
+                            </th>
+
                             <th data-field="client" data-sortable="true" data-filter-control="select">
                                 @Html.DisplayNameFor(model => model.Client)
                             </th>
                             <th data-field="ticketType" data-sortable="true" data-filter-control="select">
-                                @Html.DisplayNameFor(model => model.TicketType)
+                                @Html.DisplayNameFor(model => model.TicketTypeId)
                             </th>
                             <th data-field="location" data-sortable="true" data-filter-control="select">
                                 @Html.DisplayNameFor(model => model.Location)
                             </th>
-                            <th data-field="status" data-sortable="true" data-filter-control="select">
-                                @Html.DisplayNameFor(model => model.Status)
-                            </th>
-                            <th data-field="dueDate" data-sortable="true" data-filter-control="input">
-                                @Html.DisplayNameFor(model => model.DueDate)
-                            </th>
-                            <th data-field="startDate" data-sortable="true" data-filter-control="input">
-                                @Html.DisplayNameFor(model => model.StartDate)
-                            </th>
-                            <th data-field="endDate" data-sortable="true" data-filter-control="input">
-                                @Html.DisplayNameFor(model => model.CompletionDate)
-                            </th>
-                            <th data-field="completionDate" data-sortable="true" data-filter-control="input">
-                                @Html.DisplayNameFor(model => model.CancellationDate)
-                            </th>
-                            <th data-field="pendingDate" data-sortable="true" data-filter-control="input">
-                                @Html.DisplayNameFor(model => model.PendingDate)
-                            </th>
-                            <th data-field="markCompleted" data-sortable="true" data-filter-control="input">
-                                @Html.DisplayNameFor(model => model.MarkCompleted)
-                            </th>
-                            <th data-field="estDuration" data-sortable="true" data-filter-control="input">
-                                @Html.DisplayNameFor(model => model.EstDuration)
-                            </th>
+
+
+
                             <th data-field="actions"></th>
                         </tr>
                     </thead>
                     <tbody>
                         @foreach (var item in Model)
                         {
-                            <tr>
-                                <td>
-                                    @Html.DisplayFor(modelItem => item.Summary)
-                                </td>
-                                <td>
-                                    @Html.DisplayFor(modelItem => item.Code)
-                                </td>
-                                <td>
-                                    @Html.DisplayFor(modelItem => item.Description)
-                                </td>
-                                <td>
-                                    @Html.DisplayFor(modelItem => item.Client.Name)
-                                </td>
-                                <td>
-                                    @Html.DisplayFor(modelItem => item.TicketType.Name)
-                                </td>
-                                <td>
-                                    @Html.DisplayFor(modelItem => item.Location.Name)
-                                </td>
-                                <td>
-                                    @Html.DisplayFor(modelItem => item.Status)
-                                </td>
-                                <td>
-                                    @Html.DisplayFor(modelItem => item.DueDate)
-                                </td>
-                                <td>
-                                    @Html.DisplayFor(modelItem => item.StartDate)
-                                </td>
-                                <td>
-                                    @Html.DisplayFor(modelItem => item.CompletionDate)
-                                </td>
-                                <td>
-                                    @Html.DisplayFor(modelItem => item.CancellationDate)
-                                </td>
-                                <td>
-                                    @Html.DisplayFor(modelItem => item.PendingDate)
-                                </td>
-                                <td>
-                                    @Html.DisplayFor(modelItem => item.MarkCompleted)
-                                </td>
-                                <td>
-                                    @Html.DisplayFor(modelItem => item.EstDuration)
-                                </td>
-                                <td>
-                                    <a class="btn-sm btn-secondary mx-1" asp-action="Edit" asp-route-id="@item.Id"><i class="fa fa-pencil mx-1"></i>Edit</a>
-                                    <a class="btn-sm btn-info mx-1" asp-controller="MetaFieldValues" asp-action="Index" asp-route-assetId="@item.Id">Meta</a> 
-                                    <a class="btn-sm btn-secondary mx-1" asp-action="Details" asp-route-id="@item.Id"><i class="fa fa-list mx-1"></i>Details</a>
-                                    <a class="btn-sm btn-danger mx-1" asp-action="Delete" asp-route-id="@item.Id"><i class="fa fa-remove mx-1"></i>Delete</a>
-                                </td>
-                            </tr>
+                        <tr>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.Code)
+                            </td>
+
+                            <td>
+                                @Html.DisplayFor(modelItem => item.Summary)
+                            </td>
+
+                            <td>
+                                @Html.DisplayFor(modelItem => item.Status)
+                            </td>
+
+                            <td>
+                                @Html.DisplayFor(modelItem => item.DueDate)
+                            </td>
+
+                            <td>
+                                @Html.DisplayFor(modelItem => item.Client.Name)
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.TicketType.Name)
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.Location.Name)
+                            </td>
+
+                            <td>
+
+                                <a class="btn-sm btn-secondary mx-1" asp-action="Edit" asp-route-id="@item.Id"><i class="fa fa-pencil mx-1"></i>Edit</a>
+                                <a class="btn-sm btn-secondary mx-1" asp-action="Details" asp-route-id="@item.Id"><i class="fa fa-list mx-1"></i>Details</a>
+                                <a class="btn-sm btn-danger mx-1" asp-action="Delete" asp-route-id="@item.Id"><i class="fa fa-remove mx-1"></i>Delete</a>
+                            </td>
+                        </tr>
                         }
                     </tbody>
                 </table>
