--- a/AMS/Views/TodoTasks/Index.cshtml
+++ b/AMS/Views/TodoTasks/Index.cshtml
@@ -30,91 +30,52 @@
                        class="table">
                     <thead>
                         <tr>
-                            <th data-field="summary" data-sortable="true" data-filter-control="input">
-                                @Html.DisplayNameFor(model => model.Summary)
-                            </th>
-                            <th data-field="description" data-filter-control="input">
-                                @Html.DisplayNameFor(model => model.Description)
-                            </th>
                             <th data-field="ticket" data-filter-control="input">
                                 @Html.DisplayNameFor(model => model.Ticket)
                             </th>
-                            <th data-field="todoTaskType" data-filter-control="select">
-                                @Html.DisplayNameFor(model => model.TodoTaskType)
-                            </th>
-                            <th data-field="status" data-filter-control="select">
-                                @Html.DisplayNameFor(model => model.Status)
+                            <th data-field="summary" data-sortable="true" data-filter-control="input">
+                                @Html.DisplayNameFor(model => model.Summary)
                             </th>
                             <th data-field="dueDate" data-filter-control="input">
                                 @Html.DisplayNameFor(model => model.DueDate)
                             </th>
-                            <th data-field="startDate" data-filter-control="input">
-                                @Html.DisplayNameFor(model => model.StartDate)
+                            <th data-field="status" data-filter-control="select">
+                                @Html.DisplayNameFor(model => model.Status)
                             </th>
-                            <th data-field="completionDate" data-filter-control="input">
-                                @Html.DisplayNameFor(model => model.CompletionDate)
+                            <th data-field="todoTaskType" data-filter-control="select">
+                                @Html.DisplayNameFor(model => model.TodoTaskType)
                             </th>
-                            <th data-field="cancellationDate" data-filter-control="input">
-                                @Html.DisplayNameFor(model => model.CancellationDate)
-                            </th>
-                            <th data-field="pendingDate" data-filter-control="input">
-                                @Html.DisplayNameFor(model => model.PendingDate)
-                            </th>
-                            <th data-field="markCompleted" data-filter-control="input">
-                                @Html.DisplayNameFor(model => model.MarkCompleted)
-                            </th>
-                            <th data-field="estDuration" data-filter-control="input">
-                                @Html.DisplayNameFor(model => model.EstDuration)
-                            </th>
+
+
                             <th data-field="actions"></th>
                         </tr>
                     </thead>
                     <tbody>
                         @foreach (var item in Model)
                         {
-                            <tr>
-                                <td>
-                                    @Html.DisplayFor(modelItem => item.Summary)
-                                </td>
-                                <td>
-                                    @Html.DisplayFor(modelItem => item.Description)
-                                </td>
-                                <td>
-                                    @Html.DisplayFor(modelItem => item.Ticket.Summary)
-                                </td>
-                                <td>
-                                    @Html.DisplayFor(modelItem => item.TodoTaskType.Name)
-                                </td>
-                                <td>
-                                    @Html.DisplayFor(modelItem => item.Status)
-                                </td>
-                                <td>
-                                    @Html.DisplayFor(modelItem => item.DueDate)
-                                </td>
-                                <td>
-                                    @Html.DisplayFor(modelItem => item.StartDate)
-                                </td>
-                                <td>
-                                    @Html.DisplayFor(modelItem => item.CompletionDate)
-                                </td>
-                                <td>
-                                    @Html.DisplayFor(modelItem => item.CancellationDate)
-                                </td>
-                                <td>
-                                    @Html.DisplayFor(modelItem => item.PendingDate)
-                                </td>
-                                <td>
-                                    @Html.DisplayFor(modelItem => item.MarkCompleted)
-                                </td>
-                                <td>
-                                    @Html.DisplayFor(modelItem => item.EstDuration)
-                                </td>
-                                <td>
-                                    <a class="btn-sm btn-secondary mx-1" asp-action="Edit" asp-route-id="@item.Id"><i class="fa fa-pencil mx-1"></i>Edit</a>
-                                    <a class="btn-sm btn-secondary mx-1" asp-action="Details" asp-route-id="@item.Id"><i class="fa fa-list mx-1"></i>Details</a>
-                                    <a class="btn-sm btn-danger mx-1" asp-action="Delete" asp-route-id="@item.Id"><i class="fa fa-remove mx-1"></i>Delete</a>
-                                </td>
-                            </tr>
+                        <tr>
+                            <td>
+                                @item.Ticket?.Code
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.Ticket.Summary)
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.DueDate)
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.Status)
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.TodoTaskType.Name)
+                            </td>
+
+                            <td>
+                                <a class="btn-sm btn-secondary mx-1" asp-action="Edit" asp-route-id="@item.Id"><i class="fa fa-pencil mx-1"></i>Edit</a>
+                                <a class="btn-sm btn-secondary mx-1" asp-action="Details" asp-route-id="@item.Id"><i class="fa fa-list mx-1"></i>Details</a>
+                                <a class="btn-sm btn-danger mx-1" asp-action="Delete" asp-route-id="@item.Id"><i class="fa fa-remove mx-1"></i>Delete</a>
+                            </td>
+                        </tr>
                         }
                     </tbody>
                 </table>
