--- a/AMS/Views/Assets/Index.cshtml
+++ b/AMS/Views/Assets/Index.cshtml
@@ -63,7 +63,7 @@
                                     @Html.DisplayFor(modelItem => item.Name)
                                 </td>
                                 <td>
-                                    @Html.DisplayFor(modelItem => item.Code)
+                                   <a class="btn-link" asp-action="Details" asp-route-id="@item.Id">@item.Code</a>
                                 </td>
                                 <td>
                                     @Html.DisplayFor(modelItem => item.Client.Name)
@@ -82,7 +82,6 @@
                                 </td>
                                 <td>
                                     <a class="btn-sm btn-secondary mx-1" asp-action="Edit" asp-route-id="@item.Id"><i class="fa fa-pencil mx-1"></i>Edit</a>
-                                    <a class="btn-sm btn-info mx-1" asp-controller="MetaFieldValues" asp-action="Index" asp-route-assetId="@item.Id">Meta</a> 
                                     <a class="btn-sm btn-secondary mx-1" asp-action="Details" asp-route-id="@item.Id"><i class="fa fa-list mx-1"></i>Details</a>
                                     <a class="btn-sm btn-danger mx-1" asp-action="Delete" asp-route-id="@item.Id"><i class="fa fa-remove mx-1"></i>Delete</a>
                                 </td>
