--- a/AMS/Views/Assets/Details.cshtml
+++ b/AMS/Views/Assets/Details.cshtml
@@ -7,7 +7,52 @@
 }
 
 @inject AMS.Services.IUserService userService
-
+    <div class="row">
+        <div class="col-md-3 col-sm-6">
+            <div class="card">
+                <div class="card-body p-0 d-flex align-items-center">
+                    <i class="fa fa-cubes bg-info p-4 font-2xl mr-3"></i>
+                    <div>
+                        <div class="text-value-sm text-info">@Model.Childs.Count</div>
+                        <div class="text-muted text-uppercase font-weight-bold small">Total Sub Assets</div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-3 col-sm-6">
+            <div class="card">
+                <div class="card-body p-0 d-flex align-items-center">
+                    <i class="fa fa-tags bg-info p-4 font-2xl mr-3"></i>
+                    <div>
+                        <div class="text-value-sm text-info">@Model.Items.Count</div>
+                        <div class="text-muted text-uppercase font-weight-bold small">Items</div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-3 col-sm-6">
+            <div class="card">
+                <div class="card-body p-0 d-flex align-items-center">
+                    <i class="fa fa-exclamation-circle bg-info p-4 font-2xl mr-3"></i>
+                    <div>
+                        <div class="text-value-sm text-info">@Model.ActiveTickets?.Count()</div>
+                        <div class="text-muted text-uppercase font-weight-bold small">Active Tickets</div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-3 col-sm-6">
+            <div class="card">
+                <div class="card-body p-0 d-flex align-items-center">
+                    <i class="fa fa-exclamation-circle bg-warning p-4 font-2xl mr-3"></i>
+                    <div>
+                        <div class="text-value-sm text-info">@Model.ActiveTickets?.Count(x => x.IsOverdue)</div>
+                        <div class="text-muted text-uppercase font-weight-bold small">Overdue Tickets</div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 <div class="row">
     <div class="col-12">
         <div class="form-horizontal">
@@ -17,71 +62,74 @@
                     @Model.Code
                 </div>
                 <div class="card-body">
-
-                    <!-- Asset On/Off Switch Input -->
-                    <div class="form-group">
-                        <label class="switch switch-label switch-pill switch-primary">
-                            <input asp-for="IsOn" class="switch-input" disabled>
-                            <span class="switch-slider" data-checked="On" data-unchecked="Off"></span>
-                        </label>
-                    </div>
-
                     <div class="row">
-                        <!-- Code Input -->
-                        <div class="form-group col-md-6 col-sm-12">
-                            <label asp-for="Code" class="col-md-3 col-form-label"></label>
-                            <div class="col-md-9">
-                                <label class="form-control-static">@Model.Code</label>
+                        <div class="col-12 mb-4">
+                            <ul class="nav nav-tabs" role="tablist">
+                                <li class="nav-item">
+                                    <a class="nav-link active" data-toggle="tab" href="#general" role="tab" aria-controls="general">General</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" data-toggle="tab" href="#subassets" role="tab" aria-controls="subassets">Sub Assets</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" data-toggle="tab" href="#items" role="tab" aria-controls="items">Items</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" data-toggle="tab" href="#custodians" role="tab" aria-controls="custodians">Custodians</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" data-toggle="tab" href="#tickets" role="tab" aria-controls="tickets">Tickets</a>
+                                </li>
+                            </ul>
+
+                            <div class="tab-content">
+                                <div class="tab-pane active" id="general" role="tabpanel">
+                                    <div class="form-group row">
+                                        <label class="col-2"><strong>@Html.DisplayNameFor(m => m.Name)</strong></label>
+                                        <div class="col-10">@Model.Name (@Model.Active)</div>
+                                    </div>
+                                    <div class="form-group row">
+                                        <label class="col-2"><strong>@Html.DisplayNameFor(m => m.Code)</strong></label>
+                                        <div class="col-10">@Model.Code</div>
+                                    </div>
+                                    <div class="form-group row">
+                                        <label class="col-2"><strong>@Html.DisplayNameFor(m => m.AssetTypeId)</strong></label>
+                                        <div class="col-10"><a class="btn-link" asp-controller="AssetTypes" asp-action="Details" asp-route-id="@Model.AssetTypeId">@Model.AssetType?.Name</a></div>
+                                    </div>
+                                    <div class="form-group row">
+                                        <label class="col-2"><strong>@Html.DisplayNameFor(m => m.ClientId)</strong></label>
+                                        <div class="col-10"><a class="btn-link" asp-controller="Clients" asp-action="Details" asp-route-id="@Model.ClientId">@Model.Client?.Name</a></div>
+                                    </div>
+                                    <div class="form-group row">
+                                        <label class="col-2"><strong>@Html.DisplayNameFor(m => m.LocationId)</strong></label>
+                                        <div class="col-10"><a class="btn-link" asp-controller="Locations" asp-action="Details" asp-route-id="@Model.LocationId">@Model.Location?.Name</a></div>
+                                    </div>
+                                    @if (Model.ParentId.HasValue)
+                                    {
+                                        <div class="form-group row">
+                                            <label class="col-2"><strong>@Html.DisplayNameFor(m => m.ParentId)</strong></label>
+                                            <div class="col-10">@Model.Parent?.Name (<a class="btn-link" asp-action="Details" asp-route-id="@Model.ParentId">@Model.Parent?.Code</a>)</div>
+                                        </div>
+                                    }
+                                    <hr />
+                                    <partial name="_Fields" for="@Model" />
+                                </div>
+                                <div class="tab-pane" id="subassets" role="tabpanel">
+                                    <partial name="_SubAssets" for="@Model.Childs" />
+                                </div>
+                                <div class="tab-pane" id="items" role="tabpanel">
+                                    <partial name="_Items" for="@Model.Items" />
+                                </div>
+                                <div class="tab-pane" id="custodians" role="tabpanel">
+                                    <partial name="_Custodians" for="@Model.Custodians" />
+                                </div>
+                                <div class="tab-pane" id="tickets" role="tabpanel">
+                                    <partial name="_Tickets" for="@Model.ActiveTickets" />
+                                </div>
                             </div>
                         </div>
                     </div>
 
-                    <div class="row">
-                        <!-- AssetType Select -->
-                        <div class="form-group col-md-6 col-sm-12">
-                            <label asp-for="AssetTypeId" class="col-md-3 col-form-label"></label>
-                            <div class="col-md-9">
-                                <label class="form-control-static">@Model.AssetType?.Name</label>
-                            </div>
-                        </div>
-
-                        <!-- Name Input -->
-                        <div class="form-group col-md-6 col-sm-12">
-                            <label asp-for="Name" class="col-md-3 col-form-label"></label>
-                            <div class="col-md-9">
-                                <label class="form-control-static">@Model.Name</label>
-                            </div>
-                        </div>
-                    </div>
-
-                    <!-- Asset Client and Location Select -->
-                    <div class="row">
-                        <!-- Asset Client Select -->
-                        <div class="form-group col-md-6 col-sm-12">
-                            <label asp-for="ClientId" class="col-md-3 col-form-label"></label>
-                            <div class="col-md-9">
-                                <label class="form-control-static">@Model.Client?.Name</label>
-                            </div>
-                        </div>
-
-                        <!-- Asset Location Select -->
-                        <div class="form-group col-md-6 col-sm-12">
-                            <label asp-for="LocationId" class="col-md-3 col-form-label"></label>
-                            <div class="col-md-9">
-                                <label class="form-control-static">@Model.Location?.Name</label>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="row">
-                        <!-- Asset Parent Select -->
-                        <div class="form-group col-md-6 col-sm-12">
-                            <label asp-for="ParentId" class="col-md-3 col-form-label"></label>
-                            <div class="col-md-9">
-                                <label class="form-control-static">@Model.Parent?.Name @Model.Parent?.Code</label>
-                            </div>
-                        </div>
-                    </div>
                 </div>
             </div>
         </div>
@@ -89,45 +137,7 @@
     </div>
 </div>
 
-<div class="row mt-2">
-    <div class="col-12 mb-4">
-        <ul class="nav nav-tabs" role="tablist">
-            <li class="nav-item">
-                <a class="nav-link active" data-toggle="tab" href="#fields" role="tab" aria-controls="fields">Fields</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" data-toggle="tab" href="#subassets" role="tab" aria-controls="subassets">Sub Assets</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" data-toggle="tab" href="#items" role="tab" aria-controls="items">Items</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" data-toggle="tab" href="#custodians" role="tab" aria-controls="custodians">Custodians</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" data-toggle="tab" href="#tickets" role="tab" aria-controls="tickets">Tickets</a>
-            </li>
-        </ul>
 
-        <div class="tab-content">
-            <div class="tab-pane active" id="fields" role="tabpanel">
-                <partial name="_Fields" for="@Model" />
-            </div>
-            <div class="tab-pane" id="subassets" role="tabpanel">
-                <partial name="_SubAssets" for="@Model.Childs" />
-            </div>
-            <div class="tab-pane" id="items" role="tabpanel">
-                <partial name="_Items" for="@Model.Items" />
-            </div>
-            <div class="tab-pane" id="custodians" role="tabpanel">
-                <partial name="_Custodians" for="@Model.Custodians" />
-            </div>
-            <div class="tab-pane" id="tickets" role="tabpanel">
-                <partial name="_Tickets" for="@Model.ActiveTickets" />
-            </div>
-        </div>
-    </div>
-</div>
 
 @* view-scripts *@
 @section Scripts {
