--- a/AMS/Views/Tickets/Details.cshtml
+++ b/AMS/Views/Tickets/Details.cshtml
@@ -1,108 +1,152 @@
 ﻿@model AMS.Models.Ticket
 
 @{
-    ViewData["Title"] = "Details";
+    ViewData["Title"] = Model.Summary;
+    ViewData["Action"] = "Details";
+
 }
 
-<h1>Details</h1>
+@inject AMS.Services.IUserService userService
+<div class="row">
+    <div class="col-md-3 col-sm-6">
+        <div class="card">
+            <div class="card-body p-0 d-flex align-items-center">
+                <i class="fa fa-cubes bg-info p-4 font-2xl mr-3"></i>
+                <div>
+                    <div class="text-value-sm text-info">@Model.TicketAssets.Count</div>
+                    <div class="text-muted text-uppercase font-weight-bold small">Related Assets</div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="col-md-3 col-sm-6">
+        <div class="card">
+            <div class="card-body p-0 d-flex align-items-center">
+                <i class="fa fa-tasks bg-info p-4 font-2xl mr-3"></i>
+                <div>
+                    <div class="text-value-sm text-info">@Model.TodoTasks.Count(x => x.IsActive)</div>
+                    <div class="text-muted text-uppercase font-weight-bold small">Active Tasks</div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="col-md-3 col-sm-6">
+        <div class="card">
+            <div class="card-body p-0 d-flex align-items-center">
+                <i class="fa fa-tasks bg-warning p-4 font-2xl mr-3"></i>
+                <div>
+                    <div class="text-value-sm text-info">@Model.TodoTasks.Count(x => x.IsOverdue)</div>
+                    <div class="text-muted text-uppercase font-weight-bold small">Overdue Tasks</div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="row">
+    <div class="col-12">
+        <div class="form-horizontal">
+            <div class="card">
+                <div class="card-header">
+                    <strong>@ViewBag.Title</strong>
+                    @Model.Code
+                </div>
+                <div class="card-body">
+                    <div class="row">
+                        <div class="col-12 mb-4">
+                            <ul class="nav nav-tabs" role="tablist">
+                                <li class="nav-item">
+                                    <a class="nav-link active" data-toggle="tab" href="#general" role="tab" aria-controls="general">General</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" data-toggle="tab" href="#assignments" role="tab" aria-controls="assignments">Assignments</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" data-toggle="tab" href="#assets" role="tab" aria-controls="assets">Related Assets</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" data-toggle="tab" href="#tasks" role="tab" aria-controls="tasks">Tasks</a>
+                                </li>
+                            </ul>
 
-<div>
-    <h4>Ticket</h4>
-    <hr />
-    <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Summary)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Summary)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.CodeNumber)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.CodeNumber)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Code)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Code)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Description)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Description)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Client)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Client.Name)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.TicketType)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.TicketType.Name)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Location)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Location.Name)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Status)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Status)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.DueDate)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.DueDate)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.StartDate)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.StartDate)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.CompletionDate)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.CompletionDate)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.CancellationDate)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.CancellationDate)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.PendingDate)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.PendingDate)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.MarkCompleted)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.MarkCompleted)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.EstDuration)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.EstDuration)
-        </dd>
-    </dl>
+                            <div class="tab-content">
+                                <div class="tab-pane active" id="general" role="tabpanel">
+                                    <div class="form-group row">
+                                        <label class="col-2"><strong>@Html.DisplayNameFor(m => m.Summary)</strong></label>
+                                        <div class="col-10">@Model.Summary (@Model.Status.ToString())</div>
+                                    </div>
+                                    <div class="form-group row">
+                                        <label class="col-2"><strong>@Html.DisplayNameFor(m => m.Code)</strong></label>
+                                        <div class="col-10">@Model.Code</div>
+                                    </div>
+                                    <div class="form-group row">
+                                        <label class="col-2"><strong>@Html.DisplayNameFor(m => m.TicketTypeId)</strong></label>
+                                        <div class="col-10"><a class="btn-link" asp-controller="TicketTypes" asp-action="Details" asp-route-id="@Model.TicketTypeId">@Model.TicketType?.Name</a></div>
+                                    </div>
+                                    <div class="form-group row">
+                                        <label class="col-2"><strong>@Html.DisplayNameFor(m => m.ClientId)</strong></label>
+                                        <div class="col-10"><a class="btn-link" asp-controller="Clients" asp-action="Details" asp-route-id="@Model.ClientId">@Model.Client?.Name</a></div>
+                                    </div>
+                                    <div class="form-group row">
+                                        <label class="col-2"><strong>@Html.DisplayNameFor(m => m.LocationId)</strong></label>
+                                        <div class="col-10"><a class="btn-link" asp-controller="Locations" asp-action="Details" asp-route-id="@Model.LocationId">@Model.Location?.Name</a></div>
+                                    </div>
+                                    <div class="form-group row">
+                                        <label class="col-2"><strong>@Html.DisplayNameFor(m => m.DueDate)</strong></label>
+                                        <div class="col-10">@Model.DueDate.ToString("dd-MMM-yyyy")</div>
+                                    </div>
+                                    <div class="form-group row">
+                                        <label class="col-2"><strong>@Html.DisplayNameFor(m => m.StartDate)</strong></label>
+                                        <div class="col-10">@Model.StartDate.ToString("dd-MMM-yyyy")</div>
+                                    </div>
+                                    <div class="form-group row">
+                                        <label class="col-2"><strong>@Html.DisplayNameFor(m => m.EstDuration)</strong></label>
+                                        <div class="col-10">@Model.EstDuration days</div>
+                                    </div>
+
+                                    @if (Model.IsPending)
+                                    {
+                                        <div class="form-group row">
+                                            <label class="col-2"><strong>@Html.DisplayNameFor(m => m.PendingDate)</strong></label>
+                                            <div class="col-10">@Model.PendingDate.Value.ToString("dd-MMM-yyyy")</div>
+                                        </div>
+                                    }
+                                    @if (Model.CompletionDate.HasValue)
+                                    {
+                                        <div class="form-group row">
+                                            <label class="col-2"><strong>@Html.DisplayNameFor(m => m.CompletionDate)</strong></label>
+                                            <div class="col-10">@Model.CompletionDate.Value.ToString("dd-MMM-yyyy")</div>
+                                        </div>
+                                    }
+                                    <hr />
+                                    <partial name="_Fields" for="@Model" />
+                                </div>
+                                <div class="tab-pane" id="assignments" role="tabpanel">
+                                    <partial name="_Assignments" for="@Model.Assignments" />
+                                </div>
+                                <div class="tab-pane" id="assets" role="tabpanel">
+                                    <partial name="_Assets" for="@Model.RelatedAssets" />
+                                </div>
+                                <div class="tab-pane" id="tasks" role="tabpanel">
+                                    <partial name="_Tasks" for="@Model.TodoTasks" />
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+        </div>
+
+    </div>
 </div>
-<div>
-    <a asp-action="Edit" asp-route-id="@Model.Id">Edit</a> |
-    <a asp-action="Index">Back to List</a>
-</div>
+
+
+
+@* view-scripts *@
+@section Scripts {
+    <script>
+        $(function () {
+            $(".table").bootstrapTable();
+        });
+    </script>
+}
