--- a/AMS/Views/Tickets/Index.cshtml
+++ b/AMS/Views/Tickets/Index.cshtml
@@ -66,7 +66,7 @@
                         {
                         <tr>
                             <td>
-                                @Html.DisplayFor(modelItem => item.Code)
+                                <a asp-action="Details" asp-route-id="@item.Id">@Html.DisplayFor(modelItem => item.Code)</a>
                             </td>
 
                             <td>
