Add several details pages

--- a/AMS/Views/ClientTypes/_Clients.cshtml
+++ b/AMS/Views/ClientTypes/_Clients.cshtml
@@ -1,8 +1,8 @@
-﻿@model IEnumerable<AssetCustdian>
+﻿@model IEnumerable<Client>
 
     <div class="card">
         <div class="card-header">
-            <i class="fa fa-align-justify"></i> Custodians
+            <i class="fa fa-align-justify"></i> Clients
         </div>
         <div class="card-body">
 
@@ -15,14 +15,8 @@
                    class="table">
                 <thead>
                     <tr>
-                        <th data-field="user" data-sortable="true" data-filter-control="input">
-                            @Html.DisplayNameFor(model => model.User)
-                        </th>
                         <th data-field="name" data-sortable="true" data-filter-control="input">
                             @Html.DisplayNameFor(model => model.Name)
-                        </th>
-                        <th data-field="role" data-sortable="true" data-filter-control="select">
-                            @Html.DisplayNameFor(model => model.RoleName)
                         </th>
                     </tr>
                 </thead>
@@ -30,15 +24,8 @@
                     @foreach (var item in Model)
                     {
                         <tr>
-
                             <td>
-                                @Html.DisplayFor(modelItem => item.User.DisplayName)
-                            </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.Name)
-                            </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.RoleName)
+                                <a asp-controller="Clients" asp-action="Details" asp-route-id="@item.Id">@Html.DisplayFor(modelItem => item.Name)</a>
                             </td>
                         </tr>
                     }
@@ -47,3 +34,7 @@
 
         </div>
     </div>
+
+
+
+
