--- a/AMS/Views/LocationTypes/_Locations.cshtml
+++ b/AMS/Views/LocationTypes/_Locations.cshtml
@@ -1,8 +1,9 @@
-﻿@model IEnumerable<AssetCustdian>
+﻿@model IEnumerable<AMS.Models.Location>
 
+<div class="col-lg-12">
     <div class="card">
         <div class="card-header">
-            <i class="fa fa-align-justify"></i> Custodians
+            <i class="fa fa-align-justify"></i> Locations
         </div>
         <div class="card-body">
 
@@ -15,14 +16,11 @@
                    class="table">
                 <thead>
                     <tr>
-                        <th data-field="user" data-sortable="true" data-filter-control="input">
-                            @Html.DisplayNameFor(model => model.User)
-                        </th>
                         <th data-field="name" data-sortable="true" data-filter-control="input">
                             @Html.DisplayNameFor(model => model.Name)
                         </th>
-                        <th data-field="role" data-sortable="true" data-filter-control="select">
-                            @Html.DisplayNameFor(model => model.RoleName)
+                        <th data-field="parentLocation" data-sortable="true" data-filter-control="select">
+                            @Html.DisplayNameFor(model => model.Parent)
                         </th>
                     </tr>
                 </thead>
@@ -30,15 +28,12 @@
                     @foreach (var item in Model)
                     {
                         <tr>
-
-                            <td>
-                                @Html.DisplayFor(modelItem => item.User.DisplayName)
-                            </td>
                             <td>
                                 @Html.DisplayFor(modelItem => item.Name)
                             </td>
+
                             <td>
-                                @Html.DisplayFor(modelItem => item.RoleName)
+                                @Html.DisplayFor(modelItem => item.Parent.Name)
                             </td>
                         </tr>
                     }
@@ -47,3 +42,8 @@
 
         </div>
     </div>
+</div>
+
+
+
+
