--- a/AMS/Views/CustomLists/Details.cshtml
+++ b/AMS/Views/CustomLists/Details.cshtml
@@ -1,24 +1,72 @@
 ﻿@model AMS.Models.CustomList
 
 @{
-    ViewData["Title"] = "Details";
+    ViewData["Title"] = Model.Name;
+    ViewData["Action"] = "Details";
+
 }
 
-<h1>Details</h1>
+@inject AMS.Services.IUserService userService
+<div class="row">
+    <div class="col-md-3 col-sm-6">
+        <div class="card">
+            <div class="card-body p-0 d-flex align-items-center">
+                <i class="fa fa-list bg-info p-4 font-2xl mr-3"></i>
+                <div>
+                    <div class="text-value-sm text-info">@Model.Items.Count()</div>
+                    <div class="text-muted text-uppercase font-weight-bold small">Total Items</div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="row">
+    <div class="col-12">
+        <div class="form-horizontal">
+            <div class="card">
+                <div class="card-header">
+                    <strong>@ViewBag.Title</strong>
+                </div>
+                <div class="card-body">
+                    <div class="row">
+                        <div class="col-12 mb-4">
+                            <ul class="nav nav-tabs" role="tablist">
+                                <li class="nav-item">
+                                    <a class="nav-link active" data-toggle="tab" href="#general" role="tab" aria-controls="general">General</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" data-toggle="tab" href="#items" role="tab" aria-controls="items">Items</a>
+                                </li>
+                            </ul>
 
-<div>
-    <h4>CustomList</h4>
-    <hr />
-    <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Name)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Name)
-        </dd>
-    </dl>
+                            <div class="tab-content">
+                                <div class="tab-pane active" id="general" role="tabpanel">
+                                    <div class="form-group row">
+                                        <label class="col-2"><strong>@Html.DisplayNameFor(m => m.Name)</strong></label>
+                                        <div class="col-10">@Model.Name </div>
+                                    </div>
+                                </div>
+                                <div class="tab-pane" id="items" role="tabpanel">
+                                    <partial name="_Items" for="@Model.Items" />
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+        </div>
+
+    </div>
 </div>
-<div>
-    <a asp-action="Edit" asp-route-id="@Model.Id">Edit</a> |
-    <a asp-action="Index">Back to List</a>
-</div>
+
+
+
+@* view-scripts *@
+@section Scripts {
+    <script>
+        $(function () {
+            $(".table").bootstrapTable();
+        });
+    </script>
+}
